--- a/ref/msal-angular/classes/_msal_service_.msalservice.html
+++ b/ref/msal-angular/classes/_msal_service_.msalservice.html
@@ -110,7 +110,6 @@
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="_msal_service_.msalservice.html#getauthorityinstance" class="tsd-kind-icon">get<wbr>Authority<wbr>Instance</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_msal_service_.msalservice.html#getcachestorage" class="tsd-kind-icon">get<wbr>Cache<wbr>Storage</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="_msal_service_.msalservice.html#getcurrentconfiguration" class="tsd-kind-icon">get<wbr>Current<wbr>Configuration</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_msal_service_.msalservice.html#getlogger" class="tsd-kind-icon">get<wbr>Logger</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="_msal_service_.msalservice.html#getlogininprogress" class="tsd-kind-icon">get<wbr>Login<wbr>InProgress</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="_msal_service_.msalservice.html#getpostlogoutredirecturi" class="tsd-kind-icon">get<wbr>Post<wbr>Logout<wbr>Redirect<wbr>Uri</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="_msal_service_.msalservice.html#getredirecturi" class="tsd-kind-icon">get<wbr>Redirect<wbr>Uri</a></li>
@@ -119,6 +118,7 @@
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-overwrite"><a href="_msal_service_.msalservice.html#loginpopup" class="tsd-kind-icon">login<wbr>Popup</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="_msal_service_.msalservice.html#loginredirect" class="tsd-kind-icon">login<wbr>Redirect</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="_msal_service_.msalservice.html#logout" class="tsd-kind-icon">logout</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="_msal_service_.msalservice.html#setlogger" class="tsd-kind-icon">set<wbr>Logger</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a href="_msal_service_.msalservice.html#urlcontainshash" class="tsd-kind-icon">url<wbr>Contains<wbr>Hash</a></li>
 							</ul>
 						</section>
@@ -138,7 +138,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides UserAgentApplication.__constructor</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L33">msal.service.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L34">msal.service.ts:34</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -198,7 +198,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides UserAgentApplication.acquireTokenPopup</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L120">msal.service.ts:120</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L115">msal.service.ts:115</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -251,7 +251,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides UserAgentApplication.acquireTokenSilent</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L106">msal.service.ts:106</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L101">msal.service.ts:101</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -274,7 +274,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L176">msal.service.ts:176</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L163">msal.service.ts:163</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -372,7 +372,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L89">msal.service.ts:89</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L84">msal.service.ts:84</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">AuthCache</span></h4>
@@ -390,7 +390,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from UserAgentApplication.getCurrentConfiguration</p>
 								<ul>
-									<li>Defined in C:/Users/janutter/Code/microsoft-authentication-library-for-js/lib/msal-angular/node_modules/msal/lib-commonjs/UserAgentApplication.d.ts:455</li>
+									<li>Defined in C:/Users/janutter/Code/microsoft-authentication-library-for-js/lib/msal-angular/node_modules/msal/lib-commonjs/UserAgentApplication.d.ts:460</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -399,23 +399,6 @@
 								</div>
 							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Configuration</span></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="getlogger" class="tsd-anchor"></a>
-					<h3>get<wbr>Logger</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Logger<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Logger</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L168">msal.service.ts:168</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Logger</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -454,7 +437,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from UserAgentApplication.getPostLogoutRedirectUri</p>
 								<ul>
-									<li>Defined in C:/Users/janutter/Code/microsoft-authentication-library-for-js/lib/msal-angular/node_modules/msal/lib-commonjs/UserAgentApplication.d.ts:449</li>
+									<li>Defined in C:/Users/janutter/Code/microsoft-authentication-library-for-js/lib/msal-angular/node_modules/msal/lib-commonjs/UserAgentApplication.d.ts:454</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -479,7 +462,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from UserAgentApplication.getRedirectUri</p>
 								<ul>
-									<li>Defined in C:/Users/janutter/Code/microsoft-authentication-library-for-js/lib/msal-angular/node_modules/msal/lib-commonjs/UserAgentApplication.d.ts:442</li>
+									<li>Defined in C:/Users/janutter/Code/microsoft-authentication-library-for-js/lib/msal-angular/node_modules/msal/lib-commonjs/UserAgentApplication.d.ts:447</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -503,13 +486,13 @@
 					<a name="getscopesforendpoint" class="tsd-anchor"></a>
 					<h3>get<wbr>Scopes<wbr>For<wbr>Endpoint</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Scopes<wbr>For<wbr>Endpoint<span class="tsd-signature-symbol">(</span>endpoint<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></li>
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Scopes<wbr>For<wbr>Endpoint<span class="tsd-signature-symbol">(</span>endpoint<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L172">msal.service.ts:172</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L167">msal.service.ts:167</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -518,7 +501,7 @@
 									<h5>endpoint: <span class="tsd-signature-type">string</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -534,7 +517,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides UserAgentApplication.handleRedirectCallback</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L133">msal.service.ts:133</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L128">msal.service.ts:128</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -552,7 +535,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides UserAgentApplication.handleRedirectCallback</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L134">msal.service.ts:134</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L129">msal.service.ts:129</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -576,7 +559,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides UserAgentApplication.loginPopup</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L93">msal.service.ts:93</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-angular/src/msal.service.ts#L88">msal.service.ts:88</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -638,6 +621,38 @@
 									Default behaviour is to redirect the user to <code>window.location.href</code>.</p>
 								</div>
 							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+					<a name="setlogger" class="tsd-anchor"></a>
+					<h3>set<wbr>Logger</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+						<li class="tsd-signature tsd-kind-icon">set<wbr>Logger<span class="tsd-signature-symbol">(</span>logger<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Logger</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<p>Inherited from UserAgentApplication.setLogger</p>
+								<ul>
+									<li>Defined in C:/Users/janutter/Code/microsoft-authentication-library-for-js/lib/msal-angular/node_modules/msal/lib-commonjs/UserAgentApplication.d.ts:440</li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Sets the logger callback.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>logger: <span class="tsd-signature-type">Logger</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>Logger callback</p>
+									</div>
+								</li>
+							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
 					</ul>
@@ -747,9 +762,6 @@
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 								<a href="_msal_service_.msalservice.html#getcurrentconfiguration" class="tsd-kind-icon">get<wbr>Current<wbr>Configuration</a>
 							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_msal_service_.msalservice.html#getlogger" class="tsd-kind-icon">get<wbr>Logger</a>
-							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 								<a href="_msal_service_.msalservice.html#getlogininprogress" class="tsd-kind-icon">get<wbr>Login<wbr>InProgress</a>
 							</li>
@@ -773,6 +785,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 								<a href="_msal_service_.msalservice.html#logout" class="tsd-kind-icon">logout</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
+								<a href="_msal_service_.msalservice.html#setlogger" class="tsd-kind-icon">set<wbr>Logger</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
 								<a href="_msal_service_.msalservice.html#urlcontainshash" class="tsd-kind-icon">url<wbr>Contains<wbr>Hash</a>
